--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   firebase_remote_config: ^4.4.1
   firebase_crashlytics: ^3.5.1
   firebase_app_check: ^0.2.2+1
+  firebase_messaging: ^14.9.4
 
 dev_dependencies:
   flutter_test:
