--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.5.3+1.5.3
+version: 1.5.4+1.5.4
 
 environment:
   sdk: ">=3.3.0 <4.0.0"
@@ -36,29 +36,29 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  flutter_riverpod: ^2.5.1
-  shared_preferences: ^2.2.2
-  cloud_firestore: ^4.16.0
-  firebase_core: ^2.28.0
-  firebase_storage: ^11.6.9
-  firebase_auth: ^4.17.8
-  image_picker: ^1.0.7
-  cached_network_image: ^3.3.1
-  path_provider: ^2.1.2
-  share_plus: ^8.0.3
-  google_sign_in: ^6.2.1
-  image_cropper: ^5.0.1
-  wakelock_plus: ^1.1.4
-  google_mobile_ads: ^5.0.0
-  sign_in_button: ^3.2.0
-  firebase_database: ^10.4.9
-  flutter_native_splash: ^2.4.0
-  flutter_launcher_icons: ^0.13.1
-  firebase_remote_config: ^4.4.1
-  firebase_crashlytics: ^3.5.1
-  firebase_app_check: ^0.2.2+1
-  firebase_messaging: ^14.9.4
+  cupertino_icons:
+  flutter_riverpod:
+  shared_preferences:
+  cloud_firestore:
+  firebase_core:
+  firebase_storage:
+  firebase_auth:
+  image_picker:
+  cached_network_image:
+  path_provider:
+  share_plus:
+  google_sign_in:
+  image_cropper:
+  wakelock_plus:
+  google_mobile_ads:
+  sign_in_button:
+  firebase_database:
+  flutter_native_splash:
+  flutter_launcher_icons:
+  firebase_remote_config:
+  firebase_crashlytics:
+  firebase_app_check:
+  firebase_messaging:
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +69,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.2
+  flutter_lints:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
