--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,7 +83,15 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/person.png
+    - assets/settings/person.png
+
+    # 以下ラベル画像
+    - assets/labels/head/0101_cat.png
+    - assets/labels/body/0101_cat.gif
+    - assets/labels/head/0103_dolphin.png
+    - assets/labels/body/0103_dolphin.gif
+    - assets/labels/head/0104_penguin.png
+    - assets/labels/body/0104_penguin.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -112,22 +120,22 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
 
 flutter_native_splash:
-  image: "images/swit_splash_768.png"
+  image: "assets/settings/swit_splash_768.png"
   color: "#66c0b7"
-  image_dark: "images/swit_splash_768.png"
+  image_dark: "assets/settings/swit_splash_768.png"
   color_dark: "#66c0b7"
   fullscreen: true
 
   android_12:
-    image: "images/swit_splash_1152.png"
+    image: "assets/settings/swit_splash_1152.png"
     icon_background_color: "#66c0b7"
-    image_dark: "images/swit_splash_1152.png"
+    image_dark: "assets/settings/swit_splash_1152.png"
     icon_background_color_dark: "#66c0b7"
 
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path_ios: "images/swit_icon_1024.png"
-  image_path_android: "images/swit_icon_1024.png"
+  image_path_ios: "assets/settings/swit_icon_1024.png"
+  image_path_android: "assets/settings/swit_icon_1024.png"
   adaptive_icon_background: "#66c0b7"
-  adaptive_icon_foreground: "images/swit_icon_512.png"
+  adaptive_icon_foreground: "assets/settings/swit_icon_512.png"
